# TodoFastapi

./: config.py  main.db  main.py  pyproject.toml  req.txt  test.py
api/: __init__.py  auth.py
api/auth/: __init__.py  utils.py
api/main/: __init__.py  groups.py  todos.py  user.py
database/: __init__.py  db.sql  db_models.py  pd_models.py
